bug fixed on parallel ecxution